# visualNovelty

./: .gitignore  CMakeLists.txt  README.md
Examples/: settings_example.ini
Headers/: launcher.h  novelty.h  userConfig.h
Sources/: main.c
Sources/Launcher/: launcher.c  parse_settings.c
Sources/Scripts/: explode_params.c  lexer.c  registry.c
Sources/TripleBCode/: registry.c
